# dramaturge

./: cabal.project  flake.nix
dramaturge/: CHANGELOG.md  README.md  dramaturge.cabal
dramaturge/src/Test/: Dramaturge.hs
dramaturge/src/Test/Dramaturge/: Firefox.hs  Log.hs  Marionette.hs
dramaturge/test/: Main.hs  Server.hs
effectful-validate/: CHANGELOG.md  README.md  effectful-validate.cabal
effectful-validate/src/: ErrorId.hs
effectful-validate/src/Effectful/: Validate.hs
effectful-validate/test/: Main.hs
marionette/: README.md  marionette.cabal
marionette-effectful/: CHANGELOG.md  README.md  marionette-effectful.cabal
marionette-effectful/src/Effectful/: Marionette.hs
marionette/src/Test/: Marionette.hs
marionette/src/Test/Marionette/: Class.hs  Client.hs  Commands.hs  Protocol.hs
