cabal-version:       3.0
name:                effectful-validate
version:             0.1.0.0
synopsis:            Effectful data validation
homepage:            https://github.com/ners/dramaturge/blob/main/effectful-validate
license:             Apache-2.0
license-file:        LICENCE.md
author:              ners
maintainer:          ners@gmx.ch
bug-reports:         https://github.com/ners/dramaturge/issues
category:            Web
build-type:          Simple
extra-source-files:  CHANGELOG.md, README.md

source-repository head
  type:     git
  location: https://github.com/ners/dramaturge

common common
  default-language: GHC2021
  ghc-options:
    -Weverything
    -Wno-unsafe
    -Wno-missing-safe-haskell-mode
    -Wno-missing-export-lists
    -Wno-missing-import-lists
    -Wno-missing-kind-signatures
    -Wno-all-missed-specialisations

  default-extensions:
    ApplicativeDo
    BlockArguments
    DataKinds
    DefaultSignatures
    DeriveAnyClass
    DeriveGeneric
    DerivingStrategies
    DerivingVia
    ExplicitNamespaces
    LambdaCase
    NoImplicitPrelude
    OverloadedLabels
    OverloadedRecordDot
    RecordWildCards
    RecursiveDo
    TypeFamilies
    ViewPatterns

  build-depends:
    base,
    effectful,

library
  import: common
  hs-source-dirs: src
  build-depends:
    base,
    effectful,
    monad-control,
    monad-validate,
    mtl,
    primitive,
    transformers,
  exposed-modules:
    Effectful.Validate
  other-modules:
    ErrorId

test-suite test
  import: common
  ghc-options: -threaded
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Main.hs
  build-depends:
    hspec,
    effectful-validate,
